--- a/test index page/index.html
+++ b/test index page/index.html
@@ -7,7 +7,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.2/mqttws31.min.js" type="text/javascript"></script>
         <script src="script.js" type="text/javascript"></script>
      </head>
-     <body>
+     <body onload="startConnect()">
         <h1>Apartment Lights Control</h1>
         <div class="rooms">
             <div class="room">
