--- a/test index page/index.html
+++ b/test index page/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>High Voltages - MQTT</title>
-        <!-- <link rel="stylesheet" href="style.css"> -->
+        <link rel="stylesheet" href="style.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.2/mqttws31.min.js" type="text/javascript"></script>
         <script src="script.js" type="text/javascript"></script>
      </head>
@@ -18,9 +18,12 @@
                 <h2>Bedroom</h2>
                 <button id="bedroomBtn" class="lightBtn" onclick="publishMessage('bd')">Turn On</button>
             </div>
-            <input type="button" onclick="startConnect()"  value="Connect">
-            <input type="button"  onclick="startDisconnect()" value="Disconnect">
-            <div id="messages"></div>
+                    <!-- <input type="button" onclick="startConnect()"  value="Connect">
+                    <input type="button"  onclick="startDisconnect()" value="Disconnect"> -->
+            <div class="room">
+                <h2>Add new room</h2>
+                <button id="addNewRoom" class="lightBtn" onclick="addNewRoom()">Add new room</button>
+            </div>
         </div>
     </body>
 </html>
